# lichess-stats

./: .gitignore  README.md  eda.ipynb
.github/workflows/: build-and-deploy.yaml
backend/: .env  Dockerfile  README.md  env rohan  pyproject.toml  setup.cfg
backend/app/: config.py  documentation.py  main.py  util.py
backend/app/data_helpers/: data_conversion.py  get_games_files.py
backend/app/database/: connect.py  games.py  util.py
backend/app/jobs/: create_tables.py  drop_tables.py  load_game_data_local.py  load_game_data_local_.py  load_games.py  load_profiles.py  loaddata.py
backend/app/load_data_helpers/: eco_code_to_name.csv  get_games_files.py  util.py
backend/app/models/: games.py  profile.py  rating.py
backend/app/routes/: api.py  games.py  graph.py  profile.py  rating.py
backend/app/sql/: create_tables.sql  drop_tables.sql  statements.py  upsert_evaluation.sql  upsert_game.sql  upsert_moves.sql  upsert_player.sql  upsert_players.sql  upsert_time_remaining.sql
documentation/: ddl.sql
frontend/: .eslintrc.json  .prettierrc.json  Dockerfile  package-lock.json  package.json
frontend/public/: Chess_Board_v2 (1).gltf  Chess_Board_v2.gltf
frontend/src/: App.js  App.jsx  index.css
frontend/src/components/: Charts.jsx  Icons.jsx  Menu.jsx  Menu.module.css  Screen.jsx  Screen.module.css  Splash.jsx
frontend/src/utils/: fetch.js  selectors.js
helm/: grafana-values.yaml  prometheus-values.yaml
helm/chesswins-chart/: .helmignore  Chart.yaml  values.yaml
helm/lichess-stats-chart/: Chart.yaml  values.yaml
terraform/: eks-cluster.tf  kubeconfig_education-eks-SbbfLoEv
(+7 files in other folders)
