[tool.poetry]
name = "chess-wins-net"
version = "0.1.0"
description = "A website for analyzing the graph of wins on chess.com."
authors = [
    "Charles Cunningham <mureytasroc@gmail.com>",
    "Jay Vishwarupe <jayvish@seas.upenn.edu>",
    "Larry Huang <huangl24@seas.upenn.edu>",
    "Rohan Gupta <grohan@seas.upenn.edu>",
    "Rohan Verma <rover@seas.upenn.edu>"
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.5"
fastapi = "^0.74.1"
pytest = "^7.0.1"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
requests = "^2.27.1"
PyMySQL = "^1.0.2"
tqdm = "^4.64.0"
sentry-sdk = "^1.5.10"
aiomysql = "^0.1.0"
aiohttp = "^3.8.1"
chess = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
uvicorn = "^0.17.6"

[build-system]
requires = ["poetry>=1.1.13"]
build-backend = "poetry.masonry.api"
